# hxkit

./: .gitignore  ENGINE_IMPLEMENTATION_SUMMARY.md  INSTALL.md  MANIFEST.in  PLASTIC_PLATE_HEAT_EXCHANGER_DESIGN.md  PUBLISHING.md  README.md  fix_summary.md  pyproject.toml  setup.py  test_fix.py
docs/: thermodynamics.md
examples/: api_adapters_demo.py  api_adapters_simple.py  api_client_demo.py  basic_example.py  engine_system_demo.py  fastapi_server.py  moist_air_gui.py  performance_test.py  psychrometric_chart.py  pydantic_example.py  pydantic_example_simple.py  simple_psychrometric.py  streamlit_app.py  web_api_demo.py  web_calculator.html
hxkit/: __init__.py  fluid_flow.py  geometries.py  heat_transfer.py  plate_heat_exchanger.py  thermodynamics.py
hxkit/api/: __init__.py  adapters.py
hxkit/schemas/: __init__.py  config_schemas.py  geometry_schemas.py  thermodynamics_schemas.py
tests/: README.md  __init__.py  test_engine_system.py  test_geometries.py  test_thermodynamics.py  test_wet_bulb.py
