[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hxkit"
version = "0.2.0"
description = "Et bibliotek for å bygge varmevekslermodeller"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Kjell Kolsaker", email = "kjelkols@example.com"}
]
keywords = ["heat exchanger", "thermodynamics", "psychrometrics", "HVAC", "engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "pydantic>=2.0.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "build",
    "twine",
]
plotting = [
    "matplotlib>=3.0.0",
    "seaborn>=0.11.0",
]
web = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "streamlit>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/kjelkols/hxkit"
Repository = "https://github.com/kjelkols/hxkit"
"Bug Tracker" = "https://github.com/kjelkols/hxkit/issues"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.setuptools]
packages = ["hxkit", "hxkit.api", "hxkit.schemas"]

[tool.setuptools.package-data]
hxkit = ["*.md", "*.txt"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
